[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/Game/Ball.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Effects/Trail.gd" type="Script" id=2]
[ext_resource path="res://Textures/circle64.png" type="Texture" id=3]
[ext_resource path="res://Shaders/CircleGradient.shader" type="Shader" id=4]
[ext_resource path="res://Sounds/hit.ogg" type="AudioStream" id=5]
[ext_resource path="res://Sounds/hit2.ogg" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=7]

[sub_resource type="Gradient" id=13]
offsets = PoolRealArray( 0.178704, 1 )

[sub_resource type="GradientTexture2D" id=14]
gradient = SubResource( 13 )
fill = 1
fill_from = Vector2( 0.294444, 0.075 )
fill_to = Vector2( 1, 1 )

[sub_resource type="ShaderMaterial" id=15]
shader = ExtResource( 4 )
shader_param/gradient = SubResource( 14 )

[sub_resource type="Curve" id=10]
_data = [ Vector2( 0, 0.211656 ), 0.0, 1.17612, 0, 0, Vector2( 1, 1 ), 0.788344, 0.0, 1, 0 ]

[sub_resource type="Gradient" id=9]
offsets = PoolRealArray( 0, 0.998236, 1 )
colors = PoolColorArray( 0.857422, 0.692056, 0.0877189, 0.584314, 1, 0, 0, 0.994709, 1, 1, 1, 0 )

[node name="Ball" type="KinematicBody2D" groups=["ball"]]
position = Vector2( -1, 160 )
collision_layer = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 7 )

[node name="Body" type="Sprite" parent="."]
material = SubResource( 15 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 3 )

[node name="Polygon2D" type="Polygon2D" parent="."]
visible = false
position = Vector2( 1, 0 )
color = Color( 0.164706, 0.164706, 0.164706, 1 )
antialiased = true
polygon = PoolVector2Array( -8, 0, 0, 8, 8, 0, 0, -8 )
uv = PoolVector2Array( 157.914, 76.9136, 152.561, 87.6187, 149.885, 101, 152.561, 114.381, 157.914, 125.086, 168.619, 130.439, 182, 133.115, 195.381, 130.439, 206.086, 125.086, 211.439, 114.381, 214.115, 101, 211.439, 87.6187, 206.086, 76.9136, 195.381, 71.561, 182, 68.8848, 168.619, 71.561 )

[node name="Trail" type="Line2D" parent="."]
modulate = Color( 1, 1, 1, 0 )
points = PoolVector2Array( -19, -120 )
width = 12.0
width_curve = SubResource( 10 )
gradient = SubResource( 9 )
script = ExtResource( 2 )
length = 8

[node name="HitWall" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="HitBrick" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="HitPaddle" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
pitch_scale = 1.31

[node name="HitBoss" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
pitch_scale = 0.39
